# bevy_jam_4

.github/: workflows
.github/workflows/: release.yaml
crates/game/: Cargo.toml
crates/game/src/: items.rs  main.rs  simple_mouse.rs
crates/game/src/items/: interaction.rs
crates/inventory/: Cargo.toml
crates/screenshot/: Cargo.toml
crates/screenshot/src/: lib.rs
wasm/: index.html
