[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
inventory = { path = "../inventory" }
screenshot = { path = "../screenshot" }
bevy_mod_picking = { version = "0.17", default-features = false, features = [
    "backend_sprite",
    "backend_bevy_ui",
    "backend_raycast",
    "selection",
    "highlight",
] }
rand = "0.8.5"
rand_chacha = "0.3"
webbrowser = "0.8"
urlencoding = "2"
